# SpaceInvadersClone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  TODOS  build.bat  build.sh  main.c  space_invaders
a/: Bunker.cpp  Bunker.h  Cannon.h  Explosion.h  Horde.cpp  Shot.h  UFO.h
a/scenes/: Scene.h
a/util/: Ticker.cpp  Ticker.h
entities/: Bunker.cpp  Cannon.cpp  Horde.h  Invader.cpp  Shot.cpp  Shot.h  Shots.cpp  Shots.h  UFO.cpp
entities/entities/: Bunker.cpp  Bunker.h
entities2/: entities.h  horde.cpp  horde.h  invader.cpp  invader.h
res/: ps2p.ttf:Zone.Identifier
scenes/: GameScene.h  PlayScene.cpp
screens/: over.c  play.c  play.h
src/: App.c  App.cpp  App.h  Application.c  Application.h  Engine.cpp  Engine.h  Events.h  Explosion.h  Globals.cpp  Globals.h  Horde.cpp  Horde.h  Invader.h  InvaderShot.h  MyEngine.cpp  MyEngine.h  Renderer.c  SIC.cpp  SIC.h  Screen.h  Tourist.cpp  Tourist.h  UI.cpp  UI.h  app.c  app.h  cannon.c  common.h  context.cpp  context.h  context_main_loop.cpp  core.h  credit.c  credit.h  credit_coins.c  credit_coins.h  decls.cpp  defines.h  defs.h  (+14 more)
src/States/: GameplayState.c  GameplayState.txt  StateMachine.c  StatesInternal.h  fsm.c  fsm.h
src/Utils/: Animation.c  Animation.h  ClipAnimation.c  ClipAnimation.h  Menu.h  Render.c  Render.h  Renderer.c  Renderer.h  Timer.c  Timer.h  UIRender.c  UIRender.h
src/app/: App.h  AppBase.cpp  AppMainLoop.cpp  AppUtils.cpp
src/core/: Engine.cpp  Engine.h  Engine.hpp  Scene.hpp  app.c  app.h  asset_man.c  asset_man.h  defines.h  fsm.c  fsm.h  internal.h  (+1 more)
srca/: App.cpp  App.h  InvaderShot.h  fsms.h  main.c
(+169 files in other folders)
